--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,8 @@
    "outputs": [],
    "source": [
     "name = \"Art Vandelay\"\n",
-    "email = \"art.vandelay@vandelay.com\""
+    "email = \"art.vandelay@vandelay.com\"\n",
+    "name"
    ]
   },
   {
