--- a/index.ipynb
+++ b/index.ipynb
@@ -410,13 +410,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art.vandelay@vandelay.com'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name = \"Art Vandelay\"\n",
     "email = \"art.vandelay@vandelay.com\"\n",
-    "name"
+    "a"
    ]
   },
   {
