--- a/index.ipynb
+++ b/index.ipynb
@@ -410,16 +410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art.vandelay@vandelay.com'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
    "source": [
     "name = \"Art Vandelay\"\n",
     "email = \"art.vandelay@vandelay.com\"\n",
-    "a"
+    "name \n"
    ]
   },
   {
