Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,6 +477,8 @@
    "source": [
     "name = 'Liz Kaplan'\n",
     "email = 'liz@ka-plan.com'\n",
+    "name\n",
+    "email\n",
     "\n",
     "\"Send and email to \" + name + \" at\" + email + \" to say how nice it was meeting yesterday.\"\n"
    ]
